--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: COWSHALA
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --timeout 120
     envVars:
       - key: GOOGLE_API_KEY
         value: "AIzaSyA7mhqa0nWST2zY0m-fwhoPt8EXwIk2bqE"
